<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:orientation="vertical">


    <EditText
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_nume"
        android:hint="@string/nume"
        android:layout_margin="8dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_prenume"
        android:hint="@string/prenume"
        android:layout_margin="8dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:hint="@string/email"
        android:layout_margin="8dp"
        android:inputType="textEmailAddress"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_facultate"
        android:hint="@string/email"
        android:layout_margin="8dp"
        android:entries="@array/facultate"/>
    <RadioGroup
        android:id="@+id/rg_forma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/IF"
    android:id="@+id/rb_opt1"
    />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ZI"
        android:id="@+id/rb_opt2"
        />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit_add"
        android:text="@string/btn_submit"
        android:layout_gravity="center"/>

</LinearLayout>

